--- a/logging.conf
+++ b/logging.conf
@@ -21,13 +21,13 @@ propagate=1
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=("main.log","w")
+args=("./log/main.log","w")
 
 [handler_alignHandler]
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=("alignment.log","w")
+args=("./log/alignment.log","w")
 
 [formatter_simpleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
