--- a/src/logging.conf
+++ b/src/logging.conf
@@ -2,7 +2,7 @@
 keys=root,alignment
 
 [handlers]
-keys=alignHandler,rootHandler
+keys=alignHandler,rootHandler,mainHandler
 
 [formatters]
 keys=simpleFormatter
@@ -17,17 +17,30 @@ handlers=alignHandler
 qualname=alignment
 propagate=1
 
+[logger_main]
+level=DEBUG
+handlers=mainHandler
+qualname=main
+propagate=1
+
 [handler_rootHandler]
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=("./log/main.log","w")
+args=("./log/root.log","w")
 
 [handler_alignHandler]
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
 args=("./log/alignment.log","w")
+
+[handler_mainHandler]
+class=FileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=("./log/main.log","w")
+
 
 [formatter_simpleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
