--- a/src/logging.conf
+++ b/src/logging.conf
@@ -27,19 +27,19 @@ propagate=1
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=("./log/root.log","w")
+args=("./root.log","w")
 
 [handler_alignHandler]
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=("./log/alignment.log","w")
+args=("./alignment.log","w")
 
 [handler_mainHandler]
 class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=("./log/main.log","w")
+args=("main.log","w")
 
 
 [formatter_simpleFormatter]
